--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "react-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "1. `git clone` this repo 2. `npm install` 3. enjoy!",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Erin MacMillan",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.18.6",
+    "browser-sync": "^2.18.8",
     "browserify": "^13.3.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
@@ -20,9 +20,17 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/macmillan2020/react-test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/macmillan2020/react-test/issues"
+  },
+  "homepage": "https://github.com/macmillan2020/react-test#readme"
 }
